# course_work_3

./: README.md  pyproject.toml
src/: functions.py  main.py
tests/: conftest.py  test_functions.py
