[tool.poetry]
name = "ะบั3"
version = "0.1.0"
description = ""
authors = ["Andrey Sikorsky <nosb1992@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.3.2"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
